feat(add): 优化 翻译记录接口
